--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
+python-dotenv==1.0.1
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
